--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,7 @@
     <wb-module deploy-name="ysx2">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="ysx2"/>
         <property name="java-output-path" value="/ysx2/build/classes"/>
+        <property name="context-root" value="ysx"/>
     </wb-module>
 </project-modules>
